--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -68,66 +68,94 @@
            <div class="project-thumb">
           <img src="../images/website.jpg" width="370" height="294" alt="website" />
 </div>
+<p class="info">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
            <div class="content"><h3 class="title">Технокряк</h3>
+            
           <p class="categories">Веб-сайт</p>
           </div>
         </li>
         <li class="item">
+          <div class="project-thumb">
           <img
             src="../images/poster.basketball.jpg"
             width="370"
             height="294"
             alt="poster-basketball"
           />
+          </div>
+<p class="info">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+
           <div class="content">
           <h3 class="title">Постер New Orlean vs Golden Star</h3>
           <p class="categories">Дизайн</p>
           </div>
         </li>
         <li class="item">
+          <div class="project-thumb">
           <img
             src="../images/restaurant.seafood.jpg"
             width="370"
             height="294"
             alt="restaurant"
           />
+          </div>
+          <p class="info">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+
           <div class="content">
           <h3 class="title">Ресторан Seafood</h3>
           <p class="categories">Приложение</p>
           </div>
         </li>
         <li class="item"> 
-          <img src="../images/headphones.jpg" width="370" height="294" alt="headphones" />
+          <div class="project-thumb">
+          <img src="../images/headphones.jpg" width="370" height="294" alt="headphones" /></div>
+<p class="info">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+
           <div class="content"><h3 class="title">Проект Prime</h3>
           <p class="categories">Маркетинг</p>
           </div>
         </li>
         <li class="item">
-          <img src="../images/project.boxes.jpg" width="370" height="294" alt="boxes" />
+          <div class="project-thumb">
+          <img src="../images/project.boxes.jpg" width="370" height="294" alt="boxes" /></div>
+<p class="info">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+
           <div class="content"><h3 class="title">Проект Boxes</h3>
           <p class="categories">Приложение</p>
           </div>
         </li>
         <li class="item">
-          <img src="../images/screen.jpg" width="370" height="294" alt="screen" />
+          <div class="project-thumb">
+          <img src="../images/screen.jpg" width="370" height="294" alt="screen" /></div>
+<p class="info">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+
           <div class="content"><h3 class="title">Inspiration has no Borders</h3>
           <p class="categories">Веб-сайт</p>
           </div>
         </li>
         <li class="item">
-          <img src="../images/book.limited.edition.jpg" width="370" height="294" alt="book" />
+          <div class="project-thumb">
+          <img src="../images/book.limited.edition.jpg" width="370" height="294" alt="book" /></div>
+<p class="info">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+
           <div class="content"><h3 class="title">Издание Limited Edition</h3>
           <p class="categories">Дизайн</p>
           </div>
         </li>
         <li class="item">
-          <img src="../images/project.LAB.jpg" width="370" height="294" alt="project-LAB" />
+          <div class="project-thumb">
+          <img src="../images/project.LAB.jpg" width="370" height="294" alt="project-LAB" /></div>
+<p class="info">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+
          <div class="content"> <h3 class="title">Проект LAB</h3>
           <p class="categories">Маркетинг</p>
           </div>
         </li>
         <li class="item">
-          <img src="../images/Growing.Business.jpg" width="370" height="294" alt="notebook" />
+          <div class="project-thumb">
+          <img src="../images/Growing.Business.jpg" width="370" height="294" alt="notebook" /></div>
+<p class="info">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+
         <div class="content">  <h3 class="title">Growing Business</h3>
           <p class="categories">Приложение</p>
           </div>
@@ -203,6 +231,7 @@
           </div>
         </div>
       </section>
+      
     </footer>
   
   
