--- a/index.html
+++ b/index.html
@@ -24,29 +24,29 @@
           <span class="logo">Web</span><span class="half-logo">Studio</span>
         </a>
         <nav class="navigation">
-          <ul class="list">
-            <li class="item">
-              <a href="../index.html" class="nav-link accent">Студия</a>
+          <ul class="navigation-list">
+            <li class="navigation-item">
+              <a href="../index.html" class="navigation-link accent">Студия</a>
             </li>
-            <li class="item">
-              <a href="./pages/portfolio.html" class="nav-link">Портфолио</a>
+            <li class="navigation-item">
+              <a href="./pages/portfolio.html" class="navigation-link">Портфолио</a>
             </li>
-            <li class="item"><a href="" class="nav-link">Контакты</a></li>
+            <li class="navigation-item"><a href="" class="navigation-link">Контакты</a></li>
           </ul>
         </nav>
         <ul class="contact">
-          <li class="item">
-            <a href="mailto:info@devstudio.com" class="auth-link">
-              <svg width="16px" height="12px" class="auth-icon">
+          <li class="contact-item">
+            <a href="mailto:info@devstudio.com" class="contact-link">
+              <svg width="16px" height="12px" class="contact-icon">
                 <use href="./images/symbol-defs.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com</a
             >
           </li>
 
-          <li class="item">
-            <a href="tel:+380961111111" class="auth-link">
-              <svg width="10px" height="16px" class="auth-icon">
+          <li class="contact-item">
+            <a href="tel:+380961111111" class="contact-link">
+              <svg width="10px" height="16px" class="contact-icon">
                 <use href="./images/symbol-defs.svg#icon-smartphone"></use>
               </svg>
               +38 096 111 11 11</a
@@ -56,21 +56,21 @@
       </div>
     </header>
     <main>
-      <section class="hero">
+      <section class="section-hero">
         <div class="container">
           <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
 
-          <button data-modal-open type="button" class="priority-button">
+          <button data-modal-open type="button" class="hero-button">
             Заказать услугу
           </button>
         </div>
       </section>
-      <section class="section">
+      <section class="feature-section">
         <div class="container">
           <ul class="feature-list">
-            <li class="item">
+            <li class="feature-item">
               <div class="feature-background">
-                <svg width="70px" height="70px" class="icon-antenna">
+                <svg width="70px" height="70px" >
                   <use href="./images/symbol-defs.svg#icon-antenna"></use>
                 </svg>
               </div>
@@ -81,9 +81,9 @@
               </p>
             </li>
 
-            <li class="item icon-clock">
+            <li class="feature-item">
               <div class="feature-background">
-                <svg width="70px" height="70px" class="icon-clock">
+                <svg width="70px" height="70px">
                   <use href="./images/symbol-defs.svg#icon-clock"></use>
                 </svg>
               </div>
@@ -94,9 +94,9 @@
               </p>
             </li>
 
-            <li class="item icon-diagram">
+            <li class="feature-item">
               <div class="feature-background">
-                <svg width="70px" height="70px" class="icon-diagram">
+                <svg width="70px" height="70px">
                   <use href="./images/symbol-defs.svg#icon-diagram"></use>
                 </svg>
               </div>
@@ -106,9 +106,9 @@
                 степени обуславливает.
               </p>
             </li>
-            <li class="item icon-astronaut">
+            <li class="feature-item">
               <div class="feature-background">
-                <svg width="70px" height="70px" class="icon-astronaut">
+                <svg width="70px" height="70px">
                   <use href="./images/symbol-defs.svg#icon-astronaut"></use>
                 </svg>
               </div>
@@ -124,49 +124,49 @@
 
       <section class="section-work">
         <div class="container">
-          <h2 class="section-header">Чем мы занимаемся</h2>
-          <ul class="images">
-            <li class="item">
+          <h2 class="work-title">Чем мы занимаемся</h2>
+          <ul class="work-list">
+            <li class="work-item">
               <img
                 src="images/tablet.jpg"
                 width="370"
                 alt="вводит код на планшете"
               />
-              <p class="service">Десктопные приложения</p>
+              <p class="work-service">Десктопные приложения</p>
             </li>
-            <li class="item">
+            <li class="work-item">
               <img
                 src="images/mobileapp.jpg"
                 width="370"
                 alt="работа над дизайном мобильных приложений"
               />
-              <p class="service">Мобильные приложения</p>
+              <p class="work-service">Мобильные приложения</p>
             </li>
-            <li class="item">
+            <li class="work-item">
               <img
                 src="images/dizainer.jpg"
                 width="370"
                 alt="процесс работы дизайнера"
               />
-              <p class="service">Дизайнерские решения</p>
+              <p class="work-service">Дизайнерские решения</p>
             </li>
           </ul>
         </div>
       </section>
 
-      <section class="section-list">
+      <section class="section-command">
         <div class="container">
-          <h2 class="section-title">Наша команда</h2>
-          <ul class="person">
-            <li class="item">
+          <h2 class="command-title">Наша команда</h2>
+          <ul class="command-list">
+            <li class="command-item">
               <img
                 src="images/user1.jpg"
                 width="270"
                 alt="сотрудник компании"
               />
-              <div class="employees">
-                <h3 class="thirs-title">Игорь Демьяненко</h3>
-                <p class="description">Product Designer</p>
+              <div class="command-employees">
+                <h3 class="command-person">Игорь Демьяненко</h3>
+                <p class="command-description">Product Designer</p>
                 <ul class="social-link">
                   <li>
                     <a class="icon" href=""
@@ -205,15 +205,15 @@
                 </ul>
               </div>
             </li>
-            <li class="item">
+            <li class="command-item">
               <img
                 src="images/user2.jpg"
                 width="270"
                 alt="сотрудница компании"
               />
-              <div class="employees">
-                <h3 class="thirs-title">Ольга Репина</h3>
-                <p class="description">Frontend Developer</p>
+              <div class="command-employees">
+                <h3 class="command-person">Ольга Репина</h3>
+                <p class="command-description">Frontend Developer</p>
                 <ul class="social-link">
                   <li>
                     <a class="icon" href=""
@@ -253,15 +253,15 @@
               </div>
             </li>
 
-            <li class="item">
+            <li class="command-item">
               <img
                 src="images/user3.jpg"
                 width="270"
                 alt="сотрудник компании"
               />
-              <div class="employees">
-                <h3 class="thirs-title">Николай Тарасов</h3>
-                <p class="description">Marketing</p>
+              <div class="command-employees">
+                <h3 class="command-person">Николай Тарасов</h3>
+                <p class="command-description">Marketing</p>
                 <ul class="social-link">
                   <li>
                     <a class="icon" href=""
@@ -300,15 +300,15 @@
                 </ul>
               </div>
             </li>
-            <li class="item">
+            <li class="command-item">
               <img
                 src="images/user4.jpg"
                 width="270"
                 alt="сотрудник компании"
               />
-              <div class="employees">
-                <h3 class="thirs-title">Михаил Ермаков</h3>
-                <p class="description">UI Designer</p>
+              <div class="command-employees">
+                <h3 class="command-person">Михаил Ермаков</h3>
+                <p class="command-description">UI Designer</p>
                 <ul class="social-link">
                   <li>
                     <a class="icon" href=""
