--- a/index.html
+++ b/index.html
@@ -167,9 +167,9 @@
               <div class="command-employees">
                 <h3 class="command-person">Игорь Демьяненко</h3>
                 <p class="command-description">Product Designer</p>
-                <ul class="social-link">
+                <ul class="social-list">
                   <li>
-                    <a class="icon" href=""
+                    <a class="social-link" href=""
                       ><svg class="social-icon" width="20px" height="20px">
                         <use
                           href="./images/symbol-defs.svg#icon-instagram"
@@ -178,14 +178,14 @@
                     </a>
                   </li>
                   <li>
-                    <a class="icon" href=""
+                    <a class="social-link" href=""
                       ><svg class="social-icon" width="20px" height="20px">
                         <use href="./images/symbol-defs.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
-                    <a class="icon" href=""
+                    <a class="social-link" href=""
                       ><svg class="social-icon" width="20px" height="20px">
                         <use
                           href="./images/symbol-defs.svg#icon-facebook"
@@ -194,7 +194,7 @@
                     </a>
                   </li>
                   <li>
-                    <a class="icon" href=""
+                    <a class="social-link" href=""
                       ><svg class="social-icon" width="20px" height="20px">
                         <use
                           href="./images/symbol-defs.svg#icon-linkedin"
@@ -214,9 +214,9 @@
               <div class="command-employees">
                 <h3 class="command-person">Ольга Репина</h3>
                 <p class="command-description">Frontend Developer</p>
-                <ul class="social-link">
+                <ul class="social-list">
                   <li>
-                    <a class="icon" href=""
+                    <a class="social-link" href=""
                       ><svg class="social-icon" width="20px" height="20px">
                         <use
                           href="./images/symbol-defs.svg#icon-instagram"
@@ -225,14 +225,14 @@
                     </a>
                   </li>
                   <li>
-                    <a class="icon" href=""
+                    <a class="social-link" href=""
                       ><svg class="social-icon" width="20px" height="20px">
                         <use href="./images/symbol-defs.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
-                    <a class="icon" href=""
+                    <a class="social-link" href=""
                       ><svg class="social-icon" width="20px" height="20px">
                         <use
                           href="./images/symbol-defs.svg#icon-facebook"
@@ -241,7 +241,7 @@
                     </a>
                   </li>
                   <li>
-                    <a class="icon" href=""
+                    <a class="social-link" href=""
                       ><svg class="social-icon" width="20px" height="20px">
                         <use
                           href="./images/symbol-defs.svg#icon-linkedin"
@@ -262,9 +262,9 @@
               <div class="command-employees">
                 <h3 class="command-person">Николай Тарасов</h3>
                 <p class="command-description">Marketing</p>
-                <ul class="social-link">
+                <ul class="social-list">
                   <li>
-                    <a class="icon" href=""
+                    <a class="social-link" href=""
                       ><svg class="social-icon" width="20px" height="20px">
                         <use
                           href="./images/symbol-defs.svg#icon-instagram"
@@ -273,14 +273,14 @@
                     </a>
                   </li>
                   <li>
-                    <a class="icon" href=""
+                    <a class="social-link" href=""
                       ><svg class="social-icon" width="20px" height="20px">
                         <use href="./images/symbol-defs.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
-                    <a class="icon" href=""
+                    <a class="social-link" href=""
                       ><svg class="social-icon" width="20px" height="20px">
                         <use
                           href="./images/symbol-defs.svg#icon-facebook"
@@ -289,7 +289,7 @@
                     </a>
                   </li>
                   <li>
-                    <a class="icon" href=""
+                    <a class="social-link" href=""
                       ><svg class="social-icon" width="20px" height="20px">
                         <use
                           href="./images/symbol-defs.svg#icon-linkedin"
@@ -309,9 +309,9 @@
               <div class="command-employees">
                 <h3 class="command-person">Михаил Ермаков</h3>
                 <p class="command-description">UI Designer</p>
-                <ul class="social-link">
+                <ul class="social-list">
                   <li>
-                    <a class="icon" href=""
+                    <a class="social-link" href=""
                       ><svg class="social-icon" width="20px" height="20px">
                         <use
                           href="./images/symbol-defs.svg#icon-instagram"
@@ -320,14 +320,14 @@
                     </a>
                   </li>
                   <li>
-                    <a class="icon" href=""
+                    <a class="social-link" href=""
                       ><svg class="social-icon" width="20px" height="20px">
                         <use href="./images/symbol-defs.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
-                    <a class="icon" href=""
+                    <a class="social-link" href=""
                       ><svg class="social-icon" width="20px" height="20px">
                         <use
                           href="./images/symbol-defs.svg#icon-facebook"
@@ -336,7 +336,7 @@
                     </a>
                   </li>
                   <li>
-                    <a class="icon" href=""
+                    <a class="social-link" href=""
                       ><svg class="social-icon" width="20px" height="20px">
                         <use
                           href="./images/symbol-defs.svg#icon-linkedin"
@@ -350,11 +350,11 @@
           </ul>
         </div>
       </section>
-      <section class="section">
-        <h2 class="section-header">Постоянные клиенты</h2>
+      <section class="company-section">
+        <h2 class="company-title">Постоянные клиенты</h2>
         <div class="container">
-          <ul class="company">
-            <li class="company-list">
+          <ul class="company-list">
+            <li class="company-item">
               <a class="company-link" href="">
                 <svg class="company-icon" width="106px" height="60px">
                   <use href="./images/symbol-defs.svg#icon-ya-co"></use>
@@ -362,35 +362,35 @@
               </a>
             </li>
 
-            <li class="company-list">
+            <li class="company-item">
               <a class="company-link" href="">
                 <svg class="company-icon" width="106px" height="60px">
                   <use href="./images/symbol-defs.svg#icon-tagline-here"></use>
                 </svg>
               </a>
             </li>
-            <li class="company-list">
+            <li class="company-item">
               <a class="company-link" href="">
                 <svg class="company-icon" width="106px" height="60px">
                   <use href="./images/symbol-defs.svg#icon-company"></use>
                 </svg>
               </a>
             </li>
-            <li class="company-list">
+            <li class="company-item">
               <a class="company-link" href="">
                 <svg class="company-icon" width="106px" height="60px">
                   <use href="./images/symbol-defs.svg#icon-foster-peters"></use>
                 </svg>
               </a>
             </li>
-            <li class="company-list">
+            <li class="company-item">
               <a class="company-link" href="">
                 <svg class="company-icon" width="106px" height="60px">
                   <use href="./images/symbol-defs.svg#icon-brand"></use>
                 </svg>
               </a>
             </li>
-            <li class="company-list">
+            <li class="company-item">
               <a class="company-link" href="">
                 <svg class="company-icon" width="106px" height="60px">
                   <use href="./images/symbol-defs.svg#icon-tag-line"></use>
