--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       </div>
     </header>
     <main>
-      <section class="section-hero">
+      <section class="hero">
         <div class="container">
           <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
 
@@ -65,7 +65,7 @@
           </button>
         </div>
       </section>
-      <section class="feature-section">
+      <section class="feature">
         <div class="container">
           <ul class="feature-list">
             <li class="feature-item">
@@ -122,9 +122,9 @@
         </div>
       </section>
 
-      <section class="section-work">
+      <section class="work">
         <div class="container">
-          <h2 class="work-title">Чем мы занимаемся</h2>
+          <h2 class="section-title">Чем мы занимаемся</h2>
           <ul class="work-list">
             <li class="work-item">
               <img
@@ -154,9 +154,9 @@
         </div>
       </section>
 
-      <section class="section-command">
+      <section class="command">
         <div class="container">
-          <h2 class="command-title">Наша команда</h2>
+          <h2 class="section-title">Наша команда</h2>
           <ul class="command-list">
             <li class="command-item">
               <img
@@ -350,8 +350,8 @@
           </ul>
         </div>
       </section>
-      <section class="client-section">
-        <h2 class="client-title">Постоянные клиенты</h2>
+      <section class="client">
+        <h2 class="section-title">Постоянные клиенты</h2>
         <div class="container">
           <ul class="client-list">
             <li class="client-item">
