--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body class="page">
     <header class="page-header">
@@ -350,7 +350,7 @@
           </ul>
         </div>
       </section>
-      <section class="client">
+      <section class="section">
         <h2 class="section-title">Постоянные клиенты</h2>
         <div class="container">
           <ul class="client-list">
@@ -415,12 +415,12 @@
 
             <ul>
               <li>
-                <a href="mailto:info@devstudio.com" class="contact-link__footer"
+                <a href="mailto:info@devstudio.com" class="footer-contact__link"
                   >info@devstudio.com</a
                 >
               </li>
               <li>
-                <a href="tel:+380961111111" class="contact-link__footer"
+                <a href="tel:+380961111111" class="footer-contact__link"
                   >+38 096 111 11 11</a
                 >
               </li>
