--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -53,7 +53,7 @@
       </div>
     </header>
     <main>
-      <section class="filter-section">
+      <section class="filter">
       <div class="container">
       <ul class="filter-list">
         <li><button type="button" class="filter-button">Все</button></li>
