--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="./css/main.min.css" />
+    <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body class="page">
     <header class="page-header">
@@ -60,7 +60,7 @@
         <div class="container">
           <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
 
-          <button data-modal-open type="button" class="hero-button">
+          <button data-modal-open type="button" class=" button hero-button">
             Заказать услугу
           </button>
         </div>
@@ -350,7 +350,7 @@
           </ul>
         </div>
       </section>
-      <section class="section">
+      <section class="client">
         <h2 class="section-title">Постоянные клиенты</h2>
         <div class="container">
           <ul class="client-list">
@@ -511,7 +511,7 @@
               Соглашаюсь с рассылкой и принимаю <a class="modal-agreement__link" href="">Условия договора</a>
 
           </label>
-          <div class="modal-button__option"> <button type="submit" class="modal-form__button">Отправить</button></div>
+          <div class="modal-button__option"> <button type="submit" class="button modal-form__button">Отправить</button></div>
           
           
         </form>
