--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body class="page">
     <header class="page-header">
@@ -407,7 +407,8 @@
         <div class="footer-container container">
           <div class="footer">
             <a class="logo footer-logo" href="./">
-                 Web <span class="logo footer-logo__accent">Studio</span></a
+                 Web
+                 <span class="logo footer-logo__accent">Studio</span></a
                 >
             <address class="address">
               <a class="home-adress">г. Киев, пр-т Леси Украинки, 26</a>
