--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -14,7 +14,7 @@
      <link href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
     rel="stylesheet" />
 
-    <link rel="stylesheet" href="../css/styles.css" />
+    <link rel="stylesheet" href="../css/main.min.css" />
   </head>
   
     <body class="page">
