--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
              <div class="footer-form__option">
              <input type="email" name="email" id="email" placeholder="E-mail" required>
              <div class="form-button">
-             <button type="submit" class="footer-form__button">Подписаться 
+             <button type="submit" class="footer-form__button button">Подписаться 
               <svg width="24px" height="24px" class="footer-form__icon"><use href="./images/icon-send.svg"></use></svg></button></div>
              </form>
              </div>
