--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -235,7 +235,7 @@
              <input type="email" name="email" id="email" placeholder="E-mail" required>
              <div class="form-button">
              <button type="submit" class="footer-form__button">Подписаться 
-              <svg width="24px" height="24px" class="footer-form__icon"><use href="./images/icon-send.svg"></use></svg></button></div>
+              <svg width="24px" height="24px" class="footer-form__icon"><use href="../images/icon-send.svg"></use></svg></button></div>
              </form>
              </div>
              </div>
