--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -170,10 +170,9 @@
       <section class="footer-section">
         <div class="footer-container container">
           <div class="footer">
-                <a class="logo footer-logo" href="./"
-                  >Web
-                  <span class="logo footer-logo__accent">Studio</span></a
-                >
+                <a href="./" class="logo footer-logo">
+        Web<span class="logo footer-logo__accent">Studio</span>
+        </a>
             <address class="address">
               <a class="home-adress">г. Киев, пр-т Леси Украинки, 26</a>
             </address>
