--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
         <a href="./" class="logo main-nav__logo">
         Web<span class="logo main-nav__logo--accent">Studio</span>
         </a>
+        
+          <button type="button" class="menu-button is-open">
+            <svg width="40px" height="40px" aria-label="переключатель мобильного меню ">
+              <use class="icon-menu" href="./images/menu.svg"></use>
+              <use class="icon-close" href="./images/close.svg"></use>
+            </svg>
+          </button>
+          <div class="phone-menu">
         <nav class="navigation">
           <ul class="navigation-list">
             <li class="navigation-item">
@@ -53,6 +61,7 @@
             >
           </li>
         </ul>
+        </div>
       </div>
     </header>
     <main>
@@ -518,5 +527,6 @@
       </div>
   </div>
     <script src="./js/modal.js"></script>
+    <script src="./js/mobile-menu.js"></script>
   </body>
 </html>
