--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         Web<span class="logo main-nav__logo--accent">Studio</span>
         </a>
         
-          <button type="button" class="menu-button is-open">
+          <button type="button" class="menu-button is-open "aria-expanded="false" data-menu-button>
             <svg width="40px" height="40px" aria-label="переключатель мобильного меню ">
               <use class="icon-menu" href="./images/menu.svg"></use>
               <use class="icon-close" href="./images/close.svg"></use>
