--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               <use class="icon-close" href="./images/close.svg"></use>
             </svg>
           </button>
-          <div class="phone-menu">
+          <div class="menu-container is-open"data-menu>
         <nav class="navigation">
           <ul class="navigation-list">
             <li class="navigation-item">
@@ -53,7 +53,7 @@
           </li>
 
           <li class="contact-item">
-            <a href="tel:+380961111111" class="contact-link">
+            <a href="tel:+380961111111" class="contact-link contact-link__number">
               <svg width="10px" height="16px" class="contact-icon">
                 <use href="./images/symbol-defs.svg#icon-smartphone"></use>
               </svg>
@@ -61,6 +61,12 @@
             >
           </li>
         </ul>
+        <ul class="social-header">
+        <li><a class="social-link__header" href="">Instagram
+        <li><a class="social-link__header" href="">Twitter</a></li>
+        <li><a class="social-link__header" href="">Facebook</a></li>
+        <li><a class="social-link__header" href="">LinkeDIn</a></li>
+      </ul>
         </div>
       </div>
     </header>
@@ -165,7 +171,7 @@
 
       <section class="command">
         <div class="container">
-          <h2 class="section-title">Наша команда</h2>
+          <h2 class="command-title">Наша команда</h2>
           <ul class="command-list">
             <li class="command-item">
               <img
@@ -360,8 +366,8 @@
         </div>
       </section>
       <section class="client">
-        <h2 class="section-title">Постоянные клиенты</h2>
-        <div class="container">
+        <h2 class="client-title">Постоянные клиенты</h2>
+        <div class="container client-container">
           <ul class="client-list">
             <li class="client-item">
               <a class="client-link" href="">
