--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -84,7 +84,9 @@
        
         <li class="project-item">
            <div class="project-description--accept">
-          <img src="../images/website.jpg" width="370" height="294" alt="website" />
+          <img
+          srcset="../images/website.jpg 1x, ../images/website@2x.jpg 2x"
+           src="../images/website.jpg" width="370" height="294" alt="website" />
 </div>
 <p class="project-description">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
            <div class="project-content"><h3 class="project-title">Технокряк</h3>
@@ -95,6 +97,7 @@
         <li class="project-item">
           <div class="project-description--accept">
           <img
+          srcset="../images/poster.basketball.jpg 1x, ../images/poster-basketball@2x.jpg 2x"
             src="../images/poster.basketball.jpg"
             width="370"
             height="294"
@@ -111,6 +114,7 @@
         <li class="project-item">
           <div class="project-description--accept">
           <img
+          srcset="../images/restaurant.seafood.jpg 1x, ../images/restaurant.seafood@2x.jpg 2x"
             src="../images/restaurant.seafood.jpg"
             width="370"
             height="294"
@@ -127,7 +131,9 @@
         <li class="project-item"> 
           
           <div class="project-description--accept">
-          <img class="project-images" src="../images/headphones.jpg" width="370" height="294" alt="headphones"  /></div>
+          <img class="project-images" 
+          srcset="../images/headphones.jpg 1x, ../images/headphones@2x.jpg 2x"
+          src="../images/headphones.jpg" width="370" height="294" alt="headphones"  /></div>
 <p class="project-description">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
 
           <div class="project-content"><h3 class="project-title">Проект Prime</h3>
@@ -137,7 +143,9 @@
         </li>
         <li class="project-item">
           <div class="project-description--accept">
-          <img src="../images/project.boxes.jpg" width="370" height="294" alt="boxes" /></div>
+          <img
+          srcset="../images/project.boxes.jpg 1x, ../images/project.boxes@2x.jpg 2x" 
+          src="../images/project.boxes.jpg" width="370" height="294" alt="boxes" /></div>
 <p class="project-description">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
 
           <div class="project-content"><h3 class="project-title">Проект Boxes</h3>
@@ -146,7 +154,9 @@
         </li>
         <li class="project-item">
           <div class="project-description--accept">
-          <img src="../images/screen.jpg" width="370" height="294" alt="screen" /></div>
+          <img 
+          srcset="../images/screen.jpg 1x, ../images/screen@2x.jpg 2x"
+          src="../images/screen.jpg" width="370" height="294" alt="screen" /></div>
 <p class="project-description">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
 
           <div class="project-content"><h3 class="project-title">Inspiration has no Borders</h3>
@@ -155,7 +165,9 @@
         </li>
         <li class="project-item">
           <div class="project-description--accept">
-          <img src="../images/book.limited.edition.jpg" width="370" height="294" alt="book" /></div>
+          <img 
+          srcset="../images/book.limited.edition.jpg 1x, ../images/book.limited.edition@2x.jpg 2x"
+          src="../images/book.limited.edition.jpg" width="370" height="294" alt="book" /></div>
 <p class="project-description">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
 
           <div class="project-conten"><h3 class="project-title">Издание Limited Edition</h3>
@@ -164,7 +176,9 @@
         </li>
         <li class="project-item">
           <div class="project-description--accept">
-          <img src="../images/project.LAB.jpg" width="370" height="294" alt="project-LAB" /></div>
+          <img 
+          srcset="../images/project.LAB.jpg 1x, ../images/project.LAB@2x.jpg 2x"
+          src="../images/project.LAB.jpg" width="370" height="294" alt="project-LAB" /></div>
 <p class="project-description">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
 
          <div class="project-content"> <h3 class="project-title">Проект LAB</h3>
@@ -173,7 +187,9 @@
         </li>
         <li class="project-item">
           <div class="project-description--accept">
-          <img src="../images/Growing.Business.jpg" width="370" height="294" alt="notebook" /></div>
+          <img 
+          srcset="../images/Growing.Business.jpg 1x, ../images/Growing.Business@2x.jpg 2x"
+          src="../images/Growing.Business.jpg" width="370" height="294" alt="notebook" /></div>
 <p class="project-description">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
 
         <div class="project-content">  <h3 class="project-title">Growing Business</h3>
