--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
 
             <li class="command-item">
               <img
-              srcset="srcset=./images/user3.jpg 1x, ./images/user3@2x.jpg 2x"
+              srcset="./images/user3.jpg 1x, ./images/user3@2x.jpg 2x"
                 src="images/user3.jpg"
                 alt="сотрудник компании"
               />
@@ -324,7 +324,7 @@
             </li>
             <li class="command-item">
               <img
-              srcset="srcset=./images/user4.jpg 1x, ./images/user4@2x.jpg 2x"
+             srcset="./images/user4.jpg 1x, ./images/user4@2x.jpg 2x"
                 src="images/user4.jpg"
                 alt="сотрудник компании"
               />
