--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -84,9 +84,9 @@
        
         <li class="project-item">
            <div class="project-description--accept">
-          <img
+          <img class="project-images"
           srcset="../images/website.jpg 1x, ../images/website@2x.jpg 2x"
-           src="../images/website.jpg" width="370" height="294" alt="website" />
+           src="../images/website.jpg"  alt="website" />
 </div>
 <p class="project-description">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
            <div class="project-content"><h3 class="project-title">Технокряк</h3>
@@ -96,8 +96,8 @@
         </li>
         <li class="project-item">
           <div class="project-description--accept">
-          <img
-          srcset="../images/poster.basketball.jpg 1x, ../images/poster-basketball@2x.jpg 2x"
+          <img class="project-images"
+          srcset="../images/poster.basketball.jpg 1x, ../images/poster.basketball@2x.jpg 2x"
             src="../images/poster.basketball.jpg"
             width="370"
             height="294"
@@ -113,11 +113,10 @@
         </li>
         <li class="project-item">
           <div class="project-description--accept">
-          <img
+          <img class="project-images"
           srcset="../images/restaurant.seafood.jpg 1x, ../images/restaurant.seafood@2x.jpg 2x"
             src="../images/restaurant.seafood.jpg"
-            width="370"
-            height="294"
+           
             alt="restaurant"
           />
           </div>
@@ -143,7 +142,7 @@
         </li>
         <li class="project-item">
           <div class="project-description--accept">
-          <img
+          <img class="project-images" 
           srcset="../images/project.boxes.jpg 1x, ../images/project.boxes@2x.jpg 2x" 
           src="../images/project.boxes.jpg" width="370" height="294" alt="boxes" /></div>
 <p class="project-description">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
@@ -154,7 +153,7 @@
         </li>
         <li class="project-item">
           <div class="project-description--accept">
-          <img 
+          <img class="project-images" 
           srcset="../images/screen.jpg 1x, ../images/screen@2x.jpg 2x"
           src="../images/screen.jpg" width="370" height="294" alt="screen" /></div>
 <p class="project-description">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
@@ -165,7 +164,7 @@
         </li>
         <li class="project-item">
           <div class="project-description--accept">
-          <img 
+          <img class="project-images" 
           srcset="../images/book.limited.edition.jpg 1x, ../images/book.limited.edition@2x.jpg 2x"
           src="../images/book.limited.edition.jpg" width="370" height="294" alt="book" /></div>
 <p class="project-description">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
@@ -176,7 +175,7 @@
         </li>
         <li class="project-item">
           <div class="project-description--accept">
-          <img 
+          <img class="project-images" 
           srcset="../images/project.LAB.jpg 1x, ../images/project.LAB@2x.jpg 2x"
           src="../images/project.LAB.jpg" width="370" height="294" alt="project-LAB" /></div>
 <p class="project-description">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
@@ -187,7 +186,7 @@
         </li>
         <li class="project-item">
           <div class="project-description--accept">
-          <img 
+          <img class="project-images" 
           srcset="../images/Growing.Business.jpg 1x, ../images/Growing.Business@2x.jpg 2x"
           src="../images/Growing.Business.jpg" width="370" height="294" alt="notebook" /></div>
 <p class="project-description">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
